--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "node-gyp": "^3.8.0",
     "promise-mysql": "^3.3.1",
     "request": "^2.88.0",
+    "request-promise": "^4.2.2",
     "stylus": "0.54.5",
     "utf8": "^3.0.0"
   },
