--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "promise-mysql": "^3.3.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
+    "sha1": "^1.1.1",
+    "sha256": "^0.2.0",
     "stylus": "0.54.5",
     "utf8": "^3.0.0"
   },
